# pdoptflow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
datasets/: PD_cubicaldim1_brain3-96x128x128-perseus-csv.txt  PD_lower_star_Athens_760x585-csv.txt  PD_lower_star_Beijing_1654x2270-csv.txt  PD_rips-normal-7000x5000-h1-seed1.txt  PD_rips-normal-7000x5000-h1-seed2.txt  display_PD.py
datasets/k_experiments/: AthensxBeijing.matching
datasets/more_tests/: bottleneck_tests2_QA_exact.txt  wasserstein_tests2_QA_exact.txt
datasets/tests/: bottleneck_tests_QA_exact.txt  wasserstein_tests_QA_exact.txt
pdoptflow/: 1-wasserstein_dist.cu  CMakeLists.txt  README.md  W1.cu  k-experiments.cu
pdoptflow/include/: config.h  wasserstein.h  wasserstein_.hpp
pdoptflow/include/IO/: read_asciidiagram.h
pdoptflow/include/kdtree/: kdtree.h
pdoptflow/include/profiling/: stopwatch.h
pdoptflow/include/spanner/: rectangle.hpp  split_tree.hh  wspd.hh
pdoptflow/testing_dir/: CMakeLists.txt  more_tests.cu  tests.cu
python_experiments/: README.md  gt_candidates_seed0.npz  knn_search.py  pipeline.py  results.txt  w1estimators_find_aspect_ratio.py
python_experiments/others/: wasserstein_emd2_POT_GUDHI.py  wasserstein_hera.py  wasserstein_sinkhorn_POT_GUDHI.py
python_experiments/others/w1estimators/native/src/: pd_estimators.cpp
